# WorkloadMigrator

./: .dockerignore  .env.docker.example  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yml  pyproject.toml  pytest.ini
scripts/: test_api_flow.py
src/workload_migrator/: .env.example  manage.py
src/workload_migrator/core/: models.py  serializers.py  tasks.py  views.py
src/workload_migrator/core/tests/: test_api.py  test_models.py
src/workload_migrator/workload_migrator/: asgi.py  celery.py  settings.py  urls.py  wsgi.py
